--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -77,7 +77,7 @@
         <aside>
             <scroll id="main-aside">
                 <div style="height:1024px">
-                    <a href="#navigation" data-target="sections" data-icon="wifi" data-count="334">Navigation</a>
+                    <a href="#navigation" data-target="section" data-icon="wifi" data-count="334">Navigation</a>
                     <a href="#buttons" data-target="article" data-icon="plus">Buttons & Colours</a>
                     <a href="#forms" data-target="article" data-icon="write">Forms</a>
                     <a href="#lists" data-target="article" data-icon="note">Lists</a>
