--- a/examples/todo.js/index.html
+++ b/examples/todo.js/index.html
@@ -18,7 +18,8 @@
     <link rel="apple-touch-icon-precomposed" href="assets/images/icon.png">
     <link rel="apple-touch-startup-image" href="assets/images/default.png">
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="../../release/lungo-1.0.3.min.css">
+    <link rel="stylesheet" href="../../release/lungo-1.0.4.min.css">
+    <link rel="stylesheet" href="../../release/lungo-1.0.4.min.icons.css">
     <link rel="stylesheet" href="../../release/lungo.theme.default.css">
     <!-- Sugars :) -->
     <link rel="stylesheet" href="assets/sugars/lungo.sugar.growl.css">
@@ -128,7 +129,7 @@
 	</section>
 
     <!-- LungoJS (Production mode) -->
-    <script src="../../release/lungo-1.0.3.packed.js"></script>+
+    <script src="../../release/lungo-1.0.4.packed.js"></script>
 
     <script src="assets/sugars/lungo.sugar.growl.js"></script>
     <!-- LungoJS - Sandbox App -->
